cabal-version:      3.0
name:               ghc-prompt-control
version:            0.1
license:            BSD-3-Clause
license-file:       LICENSE
synopsis:           GHC Delimited Continuations
category:           Data
description:
  GHC delimited continuations, namely prompt and control.

author:             Oleg Grenrus <oleg.grenrus@iki.fi>
maintainer:         Oleg Grenrus <oleg.grenrus@iki.fi>
build-type:         Simple
extra-source-files: CHANGELOG.md
tested-with:
  GHC ==8.6.5
   || ==8.8.4
   || ==8.10.7
   || ==9.0.2
   || ==9.2.8
   || ==9.4.8
   || ==9.6.7
   || ==9.8.4
   || ==9.10.3
   || ==9.12.4
   || ==9.14.1

source-repository head
  type:     git
  location: https://github.com/phadej/ghc-prompt-control.git

library
  default-language: Haskell2010
  hs-source-dirs:   src
  build-depends:    base >=4.12 && <4.23
  exposed-modules:
    Control.Monad.IO.PromptControl
    Control.Monad.ST.PromptControl

test-suite ste-example
  type:             exitcode-stdio-1.0
  main-is:          ste-example.hs
  default-language: Haskell2010
  hs-source-dirs:   examples
  build-depends:
    , base
    , ghc-prompt-control

  build-depends:
    , mtl          ^>=2.3.1
    , tasty        ^>=1.5.4
    , tasty-hunit  ^>=0.10.2
